objects/DMAPP__DM_Milestone_Opportunity_Answer__c.object
<CustomObject>
    <fields>
        <fullName>DMAPP__DealmakerID__c</fullName>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__Dealmaker_Opportunity__c</fullName>
        <label>Dealmaker Opportunity</label>
        <referenceTo>DMAPP__DM_Opportunity_Extra__c</referenceTo>
        <relationshipLabel>Milestone Opportunity Answers</relationshipLabel>
        <relationshipName>Milestone_Opportunity_Answers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DMAPP__Milestone_Question_Option__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Milestone Question Option</label>
        <referenceTo>DMAPP__DM_Milestone_Question_Option__c</referenceTo>
        <relationshipLabel>Milestone Opportunity Answers</relationshipLabel>
        <relationshipName>Milestone_Opportunity_Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__Note__c</fullName>
        <label>Note</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DMAPP__Score__c</fullName>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Milestone Opportunity Answer</label>
    <listViews>
        <fullName>DMAPP__All</fullName>
        <columns>NAME</columns>
        <columns>DMAPP__Score__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Milestone Opportunity Answer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Milestone Opportunity Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>